# fff-cli

./: Cargo.toml  Makefile  README.md  flake.nix
.github/workflows/: nix.yml  release.yaml  rust.yml  spelling.yaml
scripts/: record-history-demo.sh  release.sh
src/: lib.rs  main.rs
