[package]
name = "fff"
version = "0.1.0"
edition = "2024"

[lib]
name = "fff_tui"

[[bin]]
name = "fff"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = { version = "0.29", features = ["use-dev-tty"] }
dirs = "6.0"
fff = { package = "fff-search", git = "https://github.com/dmtrKovalenko/fff.nvim", rev = "db4cd2825c32e5e53e12bb8af106ff724d33904e", features = ["zlob"] }
fff-query-parser = { git = "https://github.com/dmtrKovalenko/fff.nvim", package = "fff-query-parser", rev = "db4cd2825c32e5e53e12bb8af106ff724d33904e" }
git2 = "0.20.2"
sha1 = "0.10"
tempfile = "3.23"
